--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["src/theme/variables.scss", "src/global.scss",
+              "node_modules\\flag-icon-css\\sass\\flag-icons.scss",
+              "./node_modules/intl-tel-input/build/css/intlTelInput.css",
+            ],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
