--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
+    "flag-icon-css": "^4.1.5",
+    "google-libphonenumber": "^3.2.25",
+    "intl-tel-input": "^17.0.3",
+    "ion-intl-tel-input": "^1.0.5",
+    "ionic-selectable": "^4.9.0",
     "ng-otp-input": "^1.8.1",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-intl-tel-input": "^3.1.1",
     "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
