--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-native/call-number": "^5.36.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "call-number": "^1.0.1",
     "flag-icon-css": "^4.1.5",
     "google-libphonenumber": "^3.2.25",
     "intl-tel-input": "^17.0.3",
