--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/call-number": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "@types/google-libphonenumber": "^7.4.23",
     "call-number": "^1.0.1",
     "flag-icon-css": "^4.1.5",
     "google-libphonenumber": "^3.2.25",
@@ -36,6 +37,7 @@
     "ion-intl-tel-input": "^1.0.5",
     "ionic-selectable": "^4.9.0",
     "ng-otp-input": "^1.8.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-intl-tel-input": "^3.1.1",
     "ngx-spinner": "^12.0.0",
