--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@capacitor/status-bar": "1.0.6",
     "@ionic-native/call-number": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/geolocation": "^5.36.0",
+    "@ionic-native/native-geocoder": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@types/google-libphonenumber": "^7.4.23",
     "call-number": "^1.0.1",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
     "flag-icon-css": "^4.1.5",
     "google-libphonenumber": "^3.2.25",
     "intl-tel-input": "^17.0.3",
