--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/native-geocoder": "^5.36.0",
-    "@ionic/angular": "^5.9.1",
+    "@ionic/angular": "^5.5.2",
     "@types/google-libphonenumber": "^7.4.23",
     "call-number": "^1.0.1",
     "capacitor-razorpay": "git+https://github.com/razorpay/razorpay-capacitor.git",
@@ -51,17 +51,17 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.3",
+    "@angular-devkit/build-angular": "~12.1.1",
     "@angular-eslint/builder": "~12.0.0",
     "@angular-eslint/eslint-plugin": "~12.0.0",
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "^13.0.3",
+    "@angular/cli": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.3.1",
-    "@ionic/angular-toolkit": "^5.0.3",
+    "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
