--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/core": "3.3.1",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
+    "@capacitor/share": "^1.1.1",
     "@capacitor/status-bar": "1.0.6",
     "@ionic-native/call-number": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
