--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@capacitor/app": "1.0.6",
     "@capacitor/camera": "^1.2.1",
     "@capacitor/core": "3.3.1",
-    "@capacitor/haptics": "1.1.3",
+    "@capacitor/filesystem": "^1.1.0",
+    "@capacitor/haptics": "^1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/share": "^1.1.1",
     "@capacitor/status-bar": "1.0.6",
@@ -36,6 +37,7 @@
     "@types/google-libphonenumber": "^7.4.23",
     "call-number": "^1.0.1",
     "capacitor-razorpay": "git+https://github.com/razorpay/razorpay-capacitor.git",
+    "capacitor-voice-recorder": "^2.1.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "flag-icon-css": "^4.1.5",
